@@ -1,3 +1,7 @@
+2008-05-12  smeghead <smeghead@users.sourceforge.jp>
+
+    * download時の書き込みをfwrite関数で行なうように修正した。
+
 2008-05-09  smeghead <smeghead@users.sourceforge.jp>
 
     * freeし忘れている部分を修正した。hook処理の部分とチケット一括登録の部分。
